--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "check": "yarn tsc --noEmit && yarn eslint . && yarn prettier --write ."
   },
   "dependencies": {
+    "@next/font": "^13.0.1",
+    "clsx": "^1.2.1",
     "express": "^4.18.1",
     "next": "^13.0.1",
     "nodemon": "^2.0.20",
