--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "baseUrl": ".",
     "paths": {
       "@/components/*": [
-        "components/*"
+        "src/components/*"
       ],
       "@/hooks/*": [
         "src/hooks/*"
