--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next/font": "^13.0.1",
+    "axios": "^1.1.3",
     "clsx": "^1.2.1",
     "express": "^4.18.1",
     "next": "^13.0.1",
