--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next/font": "^13.0.1",
     "axios": "^1.1.3",
+    "body-parser": "^1.20.1",
     "clsx": "^1.2.1",
     "express": "^4.18.1",
     "next": "^13.0.1",
@@ -32,9 +33,10 @@
     "@types/node": "18.8.1",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/parser": "^5.39.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
     "autoprefixer": "^10.4.12",
-    "eslint": "^8.24.0",
+    "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^13.0.1",
     "eslint-config-prettier": "^8.5.0",
