--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "check": "yarn tsc --noEmit && yarn eslint . && yarn prettier --write ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "@next/font": "^13.0.1",
     "axios": "^1.1.3",
     "body-parser": "^1.20.1",
+    "bufferutil": "^4.0.7",
     "clsx": "^1.2.1",
     "express": "^4.18.1",
     "next": "^13.0.1",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-use-websocket": "^4.2.0",
+    "recoil": "^0.7.6",
     "socket.io": "^4.5.2",
-    "socket.io-client": "^4.5.2"
+    "socket.io-client": "^4.5.2",
+    "utf-8-validate": "^5.0.10",
+    "webpack-node-externals": "^3.0.0"
   },
   "husky": {
     "hooks": {
