--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.6.0",
     "react-use-websocket": "^4.2.0",
     "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2",
     "utf-8-validate": "^5.0.10",
