--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-toastify": "^9.1.1",
     "react-use-websocket": "^4.2.0",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
